# order_system

./: .gitignore  dummy_fileupload.py  order.db  pyproject.toml  test_uow
order_system/: app.py  config.py  domain.py  messagebus.py  orm.py  repository.py  services.py  unit_of_work.py
src/allocation/: bootstrap.py  config.py  views.py
src/allocation/adapters/: email.py  notifications.py  orm.py  redis_eventpublisher.py  repository.py
src/allocation/domain/: commands.py  events.py  model.py
src/allocation/entrypoints/: flask_app.py  redis_eventconsumer.py
src/allocation/service_layer/: handlers.py  messagebus.py  unit_of_work.py
tests/: conftest.py  test_api.py  test_batches.py  test_orm.py  test_repository.py  test_services.py
tests/e2e/: api_client.py  test_api.py  test_external_services.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py  test_views.py
tests/unit/: test_batches.py  test_handlers.py  test_product.py  test_services.py
