[tool.poetry]
name = "order-system"
version = "0.1.0"
description = ""
authors = ["Alexis Haim <alexishaim@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
requests = "^2.32.3"
psycopg2 = "^2.9.9"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
black = "^24.4.2"
isort = "^5.13.2"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
